--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,32 @@
 body {
   margin: 10px auto;
   width: 800px;
+  color: white;
+  background-image: url('background.jpg');
+  background-repeat: no-repeat;
+  background-size: 100vw;
 }
+
+.movie-detail {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+}
+
+.col-1 {
+  grid: 1;
+  margin: 5px;
+}
+
+.col-2 {
+  grid: 2;
+  margin: 5px;
+}
+
 
 .poster {
   width: 250px;
+  float: left;
+  display: block;
 }
 
 .input {
@@ -13,10 +35,17 @@ body {
   font-size: 30px;
   border: 0px;
   border-bottom: 3px solid #666666;
+  background-color: transparent;
+  color: #666666;
 }
 
 .input:focus {
   outline: none;
+  background-color: transparent;
+}
+
+.input::placeholder {
+  opacity: 0.3;
 }
 
 .search-btn {
@@ -24,8 +53,24 @@ body {
   color: none;
   border: none;
   font-size: 25px;
+  background-color: transparent;
+  color: white;
 }
 
 .search-btn:focus {
   outline: none;
+}
+
+.release-date {
+  float: left;
+  display: inline-block;
+}
+
+.vote-average {
+  float: right;
+  display: inline-block;
+}
+
+.input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px transparent inset;
 }
